# FastAPI-Cap

./: 404.html  CONTRIBUTING.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml
.github/: doc-publish.yml
.github/workflows/: pypi.yml
api/: index.html
docs/: api.md  index.md  quickstart.md
docs/strategies/: fixed_window.md  gcra.md  leaky_bucket.md  overview.md  sliding_window.md  sliding_window_log.md  token_bucket.md
fastapicap/: base_limiter.py  connection.py  lua.py
fastapicap/strategy/: fixed_window.py  gcra.py  leaky_bucket.py  sliding_window.py  sliding_window_log.py  token_bucket.py
quickstart/: index.html
search/: search_index.json
strategies/fixed_window/: index.html
strategies/gcra/: index.html
strategies/leaky_bucket/: index.html
strategies/overview/: index.html
strategies/sliding_window/: index.html
strategies/sliding_window_log/: index.html
strategies/token_bucket/: index.html
tests/: conftest.py
tests/integration/: test_fixed_window.py  test_gcra.py  test_leaky_bucket.py  test_sliding_window.py  test_sliding_window_log.py  test_token_bucket.py
tests/unit/: test_fixed_window.py  test_gcra.py  test_leaky_bucket.py  test_sliding_window.py  test_sliding_window_log.py  test_token_bucket.py
