[project]
name = "fastapi-cap"
version = "0.1.0"
description = "A robust, extensible, and production-ready rate limiting library for FastAPI, supporting multiple algorithms and Redis backend."
requires-python = ">=3.9"
authors = [
    { name = "Bijay Nayak", email = "bijay6779@gmail.com" }
]
keywords = [
    "fastapi",
    "rate-limiter",
    "redis",
    "api",
    "throttling",
    "limiter",
    "web",
    "asgi"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent"
]
dependencies = [
    "fastapi >=0.95.0",
    "redis>=4.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-xdist>=3.7.0",
    "testcontainers>=4.10.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
